--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=contoso
 
 # Configuracion Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://iasanz.synology.me:3306/mcastillol14_gasolinera?useSSL=false&serverTimezone=Europe/Madrid
-spring.datasource.username=alumno
-spring.datasource.password=AlumnoSanz$1
+spring.datasource.url=jdbc:mysql://TU-CONEXION-BDD
+spring.datasource.username=TU-USUARIO
+spring.datasource.password=TU-PASSWORD
 
 # Cambia el color de los logs.
 spring.output.ansi.enabled=always
